gcc/testsuite/gcc.dg/noncompile/20010425-1.c
__inline__ void bar(int x)
{
  (void)x;
}

void foo(void)
{
  bar(baz);  /* { dg-error "undeclared|for each function" } */
}
